--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0; 
     box-sizing: border-box;
+    --accent-color: #ff523b;
 }
 /* Navigation Section Start */
 .navbar {
@@ -62,7 +63,7 @@ p {
 }
 .btn {
     display: inline-block;
-    background: #ff523b;
+    background: var(--accent-color);
     color: #fff; 
     padding: 8px 30px;
     margin: 30px 0;
