cart icont added and styled

--- a/style.css
+++ b/style.css
@@ -77,4 +77,7 @@ p {
 .header {
     background: radial-gradient(#fff, var(--radial-background-color));
 }
+.header .row {
+    margin-top: 70px;
+}
 /* Header/Banner Section End */
