--- a/style.css
+++ b/style.css
@@ -85,5 +85,25 @@ p {
 .header .row {
     margin-top: 70px;
 }
-
 /* Header/Banner Section End */
+
+/* Featured Categories Section Start */
+.categories {
+    margin: 70px 0;
+}
+.col-3 {
+    flex-basis: 30%;
+    min-width: 250px;
+    margin-bottom: 30px;
+}
+.col-3 img {
+    width: 100%;
+}
+.small-container {
+    max-width: 1080px;
+    margin: auto;
+    padding-left: 25px;
+    padding-right: 25px;
+    
+}
+/* Featured Categories Section End */
