--- a/style.css
+++ b/style.css
@@ -154,9 +154,14 @@ h4 {
 
 /* Offer Section Start */
 .offer {
-    background: radial-gradient(#fff, #fff, var(--radial-background-color));
+    background: radial-gradient(#fff, var(--radial-background-color));
     margin-top: 80px;
     padding: 30px 0;
-
+}
+.col-2 .offer-img {
+    padding: 50px;
+}
+small {
+    color: var(--small-text-color);
 }
 /* Offer Section End */
