--- a/style.css
+++ b/style.css
@@ -165,3 +165,33 @@ small {
     color: var(--small-text-color);
 }
 /* Offer Section End */
+
+/* Testimonial Section Start */
+.testimonial {
+    padding-top: 100px;
+}
+.testimonial .col-3 {
+    text-align: center;
+    padding: 40px 20px;
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: transform .5s;
+}
+.testimonial .col-3 img {
+    width: 50px;
+    margin-top: 20px;
+    border-radius: 50%;
+}
+.testimonial .col-3:hover {
+    transform: translateY(-10px);
+}
+.fa-quote-left {
+    font-size: 34px;
+    color: var(--accent-color);
+}
+.col-3 p {
+    font-size: 12px;
+    margin: 12px 0;
+    color: #777;
+}
+/* Testimonial Section End */
