--- a/style.css
+++ b/style.css
@@ -194,4 +194,9 @@ small {
     margin: 12px 0;
     color: #777;
 }
+.testimonial .col-3 h3 {
+    font-weight: 600;
+    color: var(--small-text-color);
+    font-size: 16px;
+}
 /* Testimonial Section End */
