logo hover effect good!

--- a/style.css
+++ b/style.css
@@ -200,3 +200,21 @@ small {
     font-size: 16px;
 }
 /* Testimonial Section End */
+
+/* Brands Section Start */
+.brands {
+    margin: 100px auto;
+}
+.col-5 {
+    width: 160px;  
+}
+.col-5 img {
+    width: 100%;
+    cursor: pointer;
+    filter: grayscale(100%);
+}
+.col-5 img:hover {
+    filter: grayscale(0%);
+    
+}
+/* Brands Section End */
