--- a/style.css
+++ b/style.css
@@ -254,5 +254,10 @@ small {
 ul {
     list-style-type: none;
 }
-
+.app-logo {
+    margin-top: 20px;
+}
+.app-logo img {
+    width: 140px;
+}
 /* Footer Section End */
