--- a/style.css
+++ b/style.css
@@ -260,4 +260,13 @@ ul {
 .app-logo img {
     width: 140px;
 }
+.footer hr {
+    border: none;
+    background: #b5b5b5;;
+    height: 1px;
+    margin: 20px 0;
+}
+.copyright {
+    text-align: center;
+}
 /* Footer Section End */
