--- a/style.css
+++ b/style.css
@@ -286,6 +286,8 @@ ul {
         left: 0;
         background: #333;
         width: 100%;
+        overflow: hidden;
+        transition: max-height .5s; 
     }
     nav ul li {
         display: block;
